# llm-llava-with-python

./: README.md  pyproject.toml
llava/: app.py
